# lite-mcp

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
config/: external_mcp.json  servers.yaml
docker/: .dockerignore  .env.example  Dockerfile  README.md  README.zh_CN.md  deploy.sh  docker-compose.yml  entrypoint.sh  mirrors.env
docs/: GitlabCISetup.md  GitlabCISetup.zh_CN.md  LOGGING.md  README.zh_CN.md  STATISTICS.md  STATISTICS.zh_CN.md  USAGE.md  USAGE.zh_CN.md  diagram.puml
runtime/: registry.json  statistics.json
scripts/: manage.bat  manage.py  manage.sh
src/: __init__.py  cli.py
src/controller/: __init__.py  config_api.py  external_mcp_api.py  statistics_api.py
src/core/: __init__.py  api_server.py  config.py  logger.py  operation_mysql.py  proxy_server.py  registry.py  statistics.py  utils.py
src/tools/: __init__.py  base.py
src/tools/androidTools/: README.md  android_server.py  mobile.py
src/tools/androidTools/uiTree/: __init__.py  utils.py  views.py
src/tools/android_tools/: README.md  __init__.py  android_server.py  mobile.py
src/tools/android_tools/uiTree/: __init__.py  config.py
src/tools/common_tools/: check_server.py
src/tools/demo/: example_server.py  school_server.py
src/tools/file_system/: README.md  file_system.py
src/tools/monkey_testing/: fastbot_server.py
src/tools/monkey_testing/fastbot_android/: README.md
src/tools/mouse_tools/: README.md  mouse_server.py
src/tools/operate_mysql/: README.md  operation_mysql.py  opmysql_server.py
src/tools/operate_redis/: operation_redis.py  opredis_server.py
tests/: test_proxy.py
web/: LiteMCPConfig.vue  LiteMCPIndex.vue  README.md  env.example  env.production  index.html  index.js  main.js  package-lock.json  package.json  start.bat  start.sh  vite.config.js
web/api/mcp/: mcpApi.js
web/components/: index.js
web/components/chat/: ChatInput.vue  ChatInterface.vue  ChatMessages.vue  ChatSettings.vue  RealtimeReasoningDisplay.vue  ReasoningTrace.vue  ToolCallDisplay.vue  ToolConfirmationDialog.vue
web/components/config/: AdvancedConfig.vue  ModelConfig.vue  PromptConfig.vue  ReActConfig.vue  SystemToolsConfig.vue
web/components/dialog/: StatisticsDialog.vue  ToolDetailDialog.vue  ToolsDetailDialog.vue
web/components/mcp/: ExternalMcpManager.vue  InstanceForm.vue  McpConfigEditor.vue  McpServerCard.vue  McpServerSection.vue  McpToolsPanel.vue
web/constants/: index.js
web/docker/: .dockerignore  .env.example  Dockerfile  README.md  README.zh_CN.md  deploy.sh  docker-compose.yml  nginx.conf
web/docs/: ENVIRONMENT.md  ENVIRONMENT.zh_CN.md  README.zh_CN.md  chinese-prompts.md
web/i18n/: README.md  index.js  install.md
web/i18n/locales/: en-US.js  zh-CN.js
web/services/: ToolResolutionService.js  index.js
web/services/chat/: ChatService.js  ReActEngine.js
web/services/config/: ApiConfig.js  ConfigStorage.js  defaultPrompts.js  modelConfigs.js
web/services/mcp/: McpConnectionService.js  McpStateManager.js
web/services/system-tools/: README.md  README.zh_CN.md  index.js
web/services/system-tools/base/: SystemTool.js
web/services/system-tools/tools/: CodeExecutorTool.js  DateTimeTool.js  McpReconnectTool.js
web/styles/: global.scss
web/utils/: DebugLogger.js  UseClipboardHook.js  event-bus.js  format.js  index.js  mcpClient.js  storage.js  validation.js
