# PEP 621 标准配置 (支持 uv)
[project]
name = "lite-mcp"
version = "2.0.0"
description = "A simple Model Context Protocol (MCP) server framework"
authors = [
    {name = "hlw_tech", email = "hlw_tech@2345.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.0",
    "click>=8.1.0",
    "rich>=14.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "psutil>=7.0.0",
    "httpx>=0.28.0",
    "PyYAML>=6.0",
    "requests>=2.32.0",
    "apkutils2>=1.0.0",
    "pycryptodome>=3.23.0",
    "pymysql>=1.1.0",
    "chardet>=5.2.0",
    "Pillow>=10.4.0",
    "uiautomator2>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
litemcp = "src.cli:main"

# Poetry 配置 (保持向后兼容)
[tool.poetry]
name = "lite-mcp"
version = "2.0.0"
description = "A simple Model Context Protocol (MCP) server framework"
authors = [
    "hlw_tech <hlw_tech@2345.com>"
]
readme = "README.md"
packages = [
    {include = "src"},
]

[tool.poetry.dependencies]
python = "^3.12"
fastmcp = "^2.12.0"
click = "^8.1.0"
rich = "^14.0.0"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
psutil = "^7.0.0"
httpx = "^0.28.0"
PyYAML = "^6.0"
requests = "^2.32.0"
apkutils2 = "^1.0.0"
pycryptodome = "^3.23.0"
pymysql = "^1.1.0"
chardet = "^5.2.0"
Pillow = "^10.4.0"
uiautomator2 = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.scripts]
litemcp = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
